# chat-gpt-local

./: .env.example  .gitignore  README.md  pyproject.toml  run_app.py
docs/: index.html
docs/css/: styles.css
docs/js/: script.js
scripts/: compile_resources.py  generate_resources.py
src/chat_gpt_local/: __init__.py  main.py
src/chat_gpt_local/api/: openai_client.py
src/chat_gpt_local/config/: settings.py
src/chat_gpt_local/gui/: chat_window.py
src/chat_gpt_local/gui/resources/: __init__.py  resources.qrc
src/chat_gpt_local/gui/styles/: __init__.py  base.py  effects.py  main_window.py  message.py
src/chat_gpt_local/utils/: helpers.py
tests/: __init__.py  test_openai_client.py
